//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Experiments {
  id BigInt [pk, increment]
  title String [not null]
  description String [not null]
  status ExperimentStatus [not null, default: 'PLANNED']
  startDate DateTime [not null]
  endDate DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  completed Boolean [not null, default: false]
  ExperimentEquipmentUsage ExperimentEquipmentUsage [not null]
  Task Task [not null]
}

Table ExperimentEquipmentUsage {
  id BigInt [pk, increment]
  experimentId BigInt [not null]
  equipmentId BigInt [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  equipment Inventory [not null]
  experiment Experiments [not null]
}

Table Inventory {
  id BigInt [pk, increment]
  name String [not null]
  description String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  available Boolean [not null, default: true]
  lowStockThreshold Int [not null, default: 5]
  nextMaintenanceDate DateTime
  stockLevel Int [not null, default: 0]
  ExperimentEquipmentUsage ExperimentEquipmentUsage [not null]
  Task Task [not null]
}

Table Task {
  id BigInt [pk, increment]
  title String [not null]
  description String [not null]
  completed Boolean [not null, default: false]
  dueDate DateTime
  lastPerformed DateTime
  equipmentId BigInt
  experimentsId BigInt
  frequencyDays Int
  category TaskCategory [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  Inventory Inventory
  Experiments Experiments
}

Enum TaskCategory {
  MAINTENANCE
  EXPERIMENT
  GENERAL
}

Enum ExperimentStatus {
  PLANNED
  ONGOING
  COMPLETED
  CANCELLED
}

Ref: ExperimentEquipmentUsage.equipmentId > Inventory.id

Ref: ExperimentEquipmentUsage.experimentId > Experiments.id

Ref: Task.equipmentId > Inventory.id

Ref: Task.experimentsId > Experiments.id